<resources>
    <string name="app_name">Android_Calc</string>
    <string name="show_result">show result</string>
    <string name="clear">C</string>
    <string name="erase">erase</string>
    <string name="digit_one">1</string>
    <string name="digit_two">2</string>
    <string name="digit_three">3</string>
    <string name="division_operation">/</string>
    <string name="digit_four">4</string>
    <string name="digit_five">5</string>
    <string name="digit_six">6</string>
    <string name="multiply_operation">*</string>
    <string name="digit_seven">7</string>
    <string name="digit_eight">8</string>
    <string name="digit_nine">9</string>
    <string name="subtraction_operation">-</string>
    <string name="decimal_point">.</string>
    <string name="digit_zero">0</string>
    <string name="calculate_result">=</string>
    <string name="addition_operation">+</string>
</resources>